--- a/package.json
+++ b/package.json
@@ -11,5 +11,19 @@
   "dependencies": {
     "express": "^4.12.4",
     "socket.io": "^1.3.5"
+  },
+  "devDependencies": {
+    "babelify": "^7.3.0",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-concurrent": "^2.0.1",
+    "grunt-contrib-csslint": "^0.5.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-env": "^0.4.4",
+    "grunt-mocha-test": "^0.12.7",
+    "grunt-node-inspector": "^0.4.1",
+    "grunt-nodemon": "^0.4.0",
+    "load-grunt-tasks": "^3.5.0"
   }
 }
