--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.12.4",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
     "socket.io": "^1.3.5"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
