--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "grunt-node-inspector": "^0.4.1",
     "grunt-nodemon": "^0.4.0",
     "load-grunt-tasks": "^3.5.0"
+  },
+  "engines": {
+    "node": "4.4.5"
   }
 }
