--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-env": "^0.4.4",
+    "grunt-jsdoc": "^2.1.0",
     "grunt-mocha-test": "^0.12.7",
     "grunt-node-inspector": "^0.4.1",
     "grunt-nodemon": "^0.4.0",
