--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.12.4",
+    "mongoose": "^4.5.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "socket.io": "^1.3.5"
