--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Justin M. Hill",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jmhill/pictionary"
+  },
   "license": "MIT",
   "dependencies": {
     "express": "^4.12.4",
