--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "grunt-mocha-test": "^0.12.7",
     "grunt-node-inspector": "^0.4.1",
     "grunt-nodemon": "^0.4.0",
-    "load-grunt-tasks": "^3.5.0"
+    "load-grunt-tasks": "^3.5.0",
+    "morgan": "^1.7.0"
   },
   "engines": {
     "node": "4.4.5"
