add client js to gitignore and improve build tasks

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+# Generated client files from grunt-browserify
+public/js
+
 # node-waf configuration
 .lock-wscript
 
