--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Thinkful course demo app - collaborative drawing and guessing game",
   "main": "server.js",
   "scripts": {
+    "postinstall": "grunt build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Justin M. Hill",
