--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babelify": "^7.3.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
+    "grunt-cli": "^1.2.0",
     "grunt-concurrent": "^2.0.1",
     "grunt-contrib-csslint": "^0.5.0",
     "grunt-contrib-jshint": "^0.11.2",
