--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
-    "grunt-browserify": "^4.0.1"
+    "grunt-browserify": "^4.0.1",
+    "load-grunt-tasks": "^3.5.0"
   },
   "devDependencies": {
     "grunt-env": "^0.4.4",
@@ -30,8 +31,7 @@
     "grunt-jsdoc": "^2.1.0",
     "grunt-mocha-test": "^0.12.7",
     "grunt-node-inspector": "^0.4.1",
-    "grunt-nodemon": "^0.4.0",
-    "load-grunt-tasks": "^3.5.0"
+    "grunt-nodemon": "^0.4.0"
   },
   "engines": {
     "node": "4.4.5"
