--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.12.4",
-    "mongoose": "^4.5.1",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "socket.io": "^1.3.5",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^1.2.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
+    "body-parser": "^1.15.2",
+    "express": "^4.12.4",
+    "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
-    "load-grunt-tasks": "^3.5.0"
+    "grunt-cli": "^1.2.0",
+    "load-grunt-tasks": "^3.5.0",
+    "mongoose": "^4.5.1",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "socket.io": "^1.3.5"
   },
   "devDependencies": {
     "grunt-env": "^0.4.4",
