--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
+    "ejs": "^2.4.2",
     "express": "^4.12.4",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
